# tac-photo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: animimg001.c.0BE77AD74002A3B3.idx  animimg001.c.0C9C998F012F693C.idx  animimg001.c.ADD67E359CDB262A.idx  animimg002.c.297E740081108CDE.idx  animimg002.c.73CFC082EA103307.idx  animimg002.c.A922B53BADDEF511.idx  animimg003.c.8BE9EA27222FB9D2.idx  animimg003.c.933C0DF5EB6F5BDD.idx  animimg003.c.CCEDFA15E0F8B9EC.idx  esp_lcd_touch.c.5F5EAA14517D38EE.idx  esp_lcd_touch.c.95EAD3023DC744FC.idx  esp_lcd_touch.c.F0A9F917A252E153.idx  esp_lcd_touch.h.7A9B5B057B1D9DD2.idx  esp_lcd_touch.h.C2FFAB2C9996C8BB.idx  esp_lcd_touch.h.E81D2DE867EF66A4.idx  esp_lcd_touch_gt911.c.24E95CF6EFEAF5EA.idx  esp_lcd_touch_gt911.c.90B794210DB7CA22.idx  esp_lcd_touch_gt911.c.CF72AF3EA3A42177.idx  esp_lcd_touch_gt911.h.225274468F8B7810.idx  esp_lcd_touch_gt911.h.51202F87771B256C.idx  esp_lcd_touch_gt911.h.AF47C10185A587D5.idx  gifdec.c.9E5C2A1EB1AA922D.idx  gifdec.c.E21C19ED1EC1B9C5.idx  gifdec.c.FE2A4F4B8E8F9E8D.idx  gifdec.h.1BE9942CFBF1F934.idx  (+1645 more)
assets/edited/: landscape_sample_1.c  landscape_sample_1.sjpg
main/: .storage_manager.c.kate-swp  CMakeLists.txt  Kconfig.projbuild  am312.c  am312.h  i2c_bus_mgr.c  i2c_bus_mgr.h  idf_component.yml  lv_conf.h  lvgl_port.c  lvgl_port.h  main.c  photo_display.c  photo_display.h  photo_display_fs.c  photo_display_fs.h  sample_image.c  storage_manager.c  storage_manager.h  tm1622.c  tm1622.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
